# video_var

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  TODO.md
config/: default.ini  test.ini
include/: cuda_utils.h  temp.h
include/cuda/: error_check.h  heap.h  unordered_set.h  utils.h
include/mcp/: NNField.hpp  NNReconstruction.hpp  Renderer.hpp  STWarp.hpp  STWarpParams.hpp  WarpingField.hpp  utils.hpp
include/video/: Video.hpp  VideoExceptions.hpp  VideoProcessing.hpp
legacy_matlab/: .gitignore  attachFieldToParticles.m  computeOpticalFlow.m  computeSpatialMatch.m  debugNNF.m  exportRender.m  interpolateFieldFromParticles.m  loadParticleVideo.m  motion_install.m  newtonVariable.m  processParticles.m  render.m  test.m  testFlowHistogram.m  testOFlow.m  testPV.m  testRender.m  testSLIC.m  testSTIP.m  testViz.m
legacy_matlab/hof/: computeHOF.m  extractFeatures.m
legacy_matlab/largeDisplacement/: dominantTransforms.m  dominantTransforms2D.m  dominantTranslations.m  dominantTranslations2D.m  segmentUVW.m  segmentUVW_2D.m
legacy_matlab/stip/: projectAffine.m  ransacStip.m
legacy_matlab/utils/: exportVideo.m  loadSLIC.m  loadStip.m  loadVideo.m  loadWarpingField.m  medfilt3.m  mkmov.m  numberedFilePath.m  saveWarpingField.m  weighted_histogram.m  weighted_histogram_interp.m
legacy_matlab/warping/: backWarp2D.m  backWarp3D.m  registerField.m
legacy_test/: CMakeLists.txt  STWarpTests.cpp  VideoProcessingTests.cpp  VideoTests.cpp
matlab/: debug.m  debug_nnf.m  debug_stwarp.m  demo_syn.m  gen.m  init.m  run.m  run_warp.m  tali.m  test  test.m  test_all.m  test_current.m  tmp.m  warp_rockettes.m
matlab/interpolate/: backward_interpolate.m  backward_warp.m  nnf_warp.m
matlab/io/: convert_video_to_mat.m  debug_path.m  load_video.m  save_video.m
matlab/nlvv/: compute_nn_weights.m  consistent_resize.m  consistent_video_resize.m  enforce_warp_consistency.m  get_derivative_filters3d.m  nlvv.m  nlvv_ms_iteration.m  reset_warp_boundaries.m  robust_cost.m  update_regular_video.m
matlab/non_local_var/: .gitignore  FlowConsistency2.m  Identity.m  NonLocalVarColorMain.m  NonLocalVarDemo.m  NonLocalVarMain.m  NonLocalVarMultiScale.m  ResizeConsistentOut.m  ind2ImAvg_mex.mexa64  my_ycbcr2rgb.m  readme.txt
matlab/non_local_var/libs/patchmatch-2.1 3/: build_mac.m  build_unix.sh  nnmex.mexw64  patch.h
matlab/params/: knnf_params.m  nlvv_params.m  stwarp_params.m
matlab/synth/: oscillating_square.m
matlab/test/: ConsistentVideoResizeTest.m  KNNfieldTest.m  ReconstructFromKNNFTest.m  nnfieldTest.m
matlab/viz/: flowToColor.m  make_overlay.m  nn_gallery.m  nnf_cursor.m  nnf_to_warp.m  normalize_video.m  space_time_scatter.m  video_slice.m  viz_warp.m
matlab/viz_warp/: computeColor.m  make_overlay.m
ref/: diary.md  notes_fall2013.md
src/: CMakeLists.txt  main.cpp
src/mcp/: CMakeLists.txt  NNField.cpp  NNField.cu  NNReconstruction.cpp  NNReconstruction.cu  Renderer.cpp  STWarp.cpp  STWarpParams.cpp  STWarp_denoising.cpp  STWarp_warpingIteration.cpp  STWarp_warpingIterationAux.cpp  WarpingField.cpp  patchmatch3d.cpp  pm_kernel_tmp.cu  pm_ref.cpp
src/mexfiles/: CMakeLists.txt  knnfield.cpp  reconstruct_from_knnf.cpp  sample.cpp  stwarp.cpp
src/optical_flow/: CMakeLists.txt  GaussianPyramid.cpp  Image.h  ImageProcessing.h  NoiseModel.h  OpticalFlow.cpp  OpticalFlow.h  Stochastic.h  project.h
src/video/: CMakeLists.txt  Video.cpp  VideoProcessing.cpp
test/: CMakeLists.txt  fixtures.hpp  test_nn_reconstruct.cpp  test_nnfield.cpp  test_stwarp.cpp  test_video.cpp
